tests/NormalTests/paczka1/fuzzy1/73507329.err
Error in line 5: Tmt A303 32,6
Error in line 21: bVQ8y A303 13O,0
Error in line 18: A303 S917 73,4
Error in line 28: Tmt A3v3 55,v
Error in line 33: rSy7ZCyj A303 12,1
